<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="center"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="18dp"
    android:background="@drawable/rounded_bg"
    android:backgroundTint="@color/editor_controller_bg">

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/textColor"/>

    <LinearLayout
        android:visibility="gone"
        android:gravity="center"
        android:id="@+id/tryagainLay"
        android:layout_toRightOf="@id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/stripe_ic_error"/>
        <TextView
            android:layout_marginTop="6dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error"
            android:textSize="16sp"
            android:textColor="@color/textColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/something_wrong"
            android:textSize="12sp"
            android:textColor="@color/textColor"/>

        <Button
            android:id="@+id/tryAgainBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again"
            android:textAllCaps="false"/>
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/tv_lay"
        android:layout_marginLeft="12dp"
        android:layout_toRightOf="@id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_wait"
            android:textSize="18sp"
            android:textColor="@color/textColor"/>
        <TextView
            android:id="@+id/message_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/processing"
            android:textSize="12sp"
            android:textColor="@color/textColor"/>

    </LinearLayout>

</LinearLayout>