<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:paddingTop="16dp">

    <!-- Close Icon -->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivClose"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/iv_close"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp" />

    <!-- Scrollable Content -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:background="@android:color/white"
        android:elevation="8dp">

        <LinearLayout
            android:id="@+id/bottomSheetContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clipToPadding="false"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_opportunity_size"
                android:background="#F8F4F4"
                android:textColor="#666666"
                android:paddingVertical="@dimen/_14sp"
                android:textSize="15sp"
                android:paddingStart="@dimen/_16sp"
                android:fontFamily="@font/medium" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_58sp"
                android:layout_marginTop="@dimen/_12sp"
                android:layout_marginHorizontal="@dimen/_16sp"
                android:background="@drawable/edt_bg_selector_mfl">

                <TextView
                    android:id="@+id/txtSymbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/symbol"
                    android:textSize="22sp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_14sp"
                    android:fontFamily="@font/poppins_medium"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtAmount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:background="@null"
                    android:fontFamily="@font/normal"
                    android:singleLine="true"
                    android:paddingHorizontal="@dimen/_12sp"
                    android:layout_toEndOf="@+id/txtSymbol"
                    android:inputType="number" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sp"
                android:layout_marginTop="@dimen/_25sp"
                android:layout_marginBottom="@dimen/_25sp"
                android:background="@drawable/login_button"
                android:backgroundTint="@null"
                android:fontFamily="@font/medium"
                android:text="@string/save"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>
