<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="model"
            type="com.android.masterdistributormdl.gskDistributor.view.home.AddSalesModel" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        android:theme="@style/MaterialTheme">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#132D5F"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_15sp"
            android:paddingTop="@dimen/_15sp"
            android:paddingBottom="@dimen/_60sp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/back"
                android:layout_width="@dimen/_35sp"
                android:layout_height="@dimen/_35sp"
                android:src="@drawable/arrow_left_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sp"
                android:fontFamily="@font/medium"
                android:text="Add Sales Agent"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_16sp" />


        </LinearLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_minus45sp"
            android:background="@drawable/login_">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/_20sp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/nameInputLay"
                        style="@style/OutlinedBoxStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/normal"
                            android:hint="@string/enter_name"
                            android:importantForAutofill="no"
                            android:inputType="textCapWords"

                            android:paddingStart="@dimen/_15sp"
                            android:paddingEnd="@dimen/_15sp"
                            android:singleLine="true"
                            android:textColor="#1D3667"
                            android:textCursorDrawable="@drawable/color_cursor"

                            android:textSize="@dimen/_12sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/mobileInputLay"
                        style="@style/OutlinedBoxStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/mobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/normal"
                            android:hint="@string/enter_mobile_no"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:maxLength="10"
                            android:paddingStart="@dimen/_15sp"
                            android:paddingEnd="@dimen/_15sp"
                            android:singleLine="true"
                            android:textColor="#1D3667"
                            android:textCursorDrawable="@drawable/color_cursor"

                            android:textSize="@dimen/_12sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailInputLay"
                        style="@style/OutlinedBoxStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/normal"
                            android:hint="@string/enter_email"
                            android:importantForAutofill="no"
                            android:inputType="textEmailAddress"

                            android:paddingStart="@dimen/_15sp"
                            android:paddingEnd="@dimen/_15sp"
                            android:singleLine="true"
                            android:textColor="#1D3667"
                            android:textCursorDrawable="@drawable/color_cursor"

                            android:textSize="@dimen/_12sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                </FrameLayout>


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/addressInputLay"
                        style="@style/OutlinedBoxStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/normal"
                            android:hint="@string/enter_address"
                            android:importantForAutofill="no"
                            android:inputType="textCapWords"
                            android:paddingStart="@dimen/_15sp"
                            android:paddingEnd="@dimen/_15sp"
                            android:singleLine="true"
                            android:textColor="#1D3667"
                            android:textCursorDrawable="@drawable/color_cursor"

                            android:textSize="@dimen/_12sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/pincodeInputLay"
                        style="@style/OutlinedBoxStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/pincode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/normal"
                            android:hint="@string/enter_pin_code"
                            android:importantForAutofill="no"
                            android:inputType="number"

                            android:maxLength="6"
                            android:paddingStart="@dimen/_15sp"
                            android:paddingEnd="@dimen/_15sp"
                            android:singleLine="true"
                            android:textColor="#1D3667"
                            android:textCursorDrawable="@drawable/color_cursor"

                            android:textSize="@dimen/_12sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/districtInputLay"
                        style="@style/OutlinedBoxStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/district"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:fontFamily="@font/normal"
                            android:hint="@string/enter_city"
                            android:importantForAutofill="no"
                            android:inputType="textCapWords"

                            android:paddingStart="@dimen/_15sp"
                            android:paddingEnd="@dimen/_15sp"
                            android:singleLine="true"
                            android:textColor="#1D3667"
                            android:textCursorDrawable="@drawable/color_cursor"

                            android:textSize="@dimen/_12sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="@dimen/_10sp"
                        android:layout_height="@dimen/_5sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/stateInputLay"
                        style="@style/OutlinedBoxStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/state"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/normal"
                            android:hint="@string/enter_state"
                            android:importantForAutofill="no"
                            android:inputType="textCapWords"
                            android:paddingStart="@dimen/_15sp"
                            android:paddingEnd="@dimen/_15sp"
                            android:singleLine="true"
                            android:textColor="#1D3667"
                            android:textCursorDrawable="@drawable/color_cursor"

                            android:textSize="@dimen/_12sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/save"
                    style="@style/button"
                    android:layout_marginTop="@dimen/_7sp"
                    android:layout_marginBottom="@dimen/_5sp"
                    android:text="Save" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </LinearLayout>
</layout>
